--- a/basicTestsTesche.ipynb
+++ b/basicTestsTesche.ipynb
@@ -9,9 +9,10 @@
     "\n",
     "The coupling of Electromagnetic energy to a transmission line (TL) is a quite interesting problem. One can think of different applications where it is important to understand or at least get a feeling of how much energy is transfered into a system via TL's; [Counter-drones](https://apelc.com/high-power-wideband-for-counter-uav-uas/) systems is one of them. Imagine a cheap commercial drone adapted to create havoc in enemy territory. \n",
     "<figure>\n",
-    "<center><img src=\"./Images/counter-drone.png\" style=\"width:50%\">\n",
+    "<center><img src=\"https://github.com/deweatherman/BLT_Equation_Time_Domain_Application/blob/main/Images/counter-drone.png\" style=\"width:50%\">\n",
     "<figcaption align = \"center\"> Counter drone system, image <a href=\"https://apelc.com/high-power-wideband-for-counter-uav-uas/\">source</a> </figcaption> </center>\n",
-    "</figure>"
+    "</figure>\n",
+    "\n"
    ]
   },
   {
