Trying image display

--- a/basicTestsTesche.ipynb
+++ b/basicTestsTesche.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "What's more interesting, we want to be able to analyze or choose from different options in the realm of Directed Energy (DE) sources, one such source is the JOLT system developed at the Air Force Research Laboratory (AFRL), which produces a massive, ultra-fast and directed pulse of several hundreds of kV/m at a few meters distance from it: \n",
     "<figure>\n",
-    "<center><img src=\"./Images/JOLT.png\" style=\"width:50%\">\n",
+    "<center><img src=\"https://i0.wp.com/apelc.com/wp-content/uploads/2023/05/2.png?w=648&ssl=1\" style=\"width:50%\">\n",
     "<figcaption align = \"center\"> JOLT system, image <a href=\"https://apelc.com/high-power-wideband-for-counter-uav-uas/\">source</a> </figcaption> </center>\n",
     "</figure>\n",
     "\n",
