Trying image display 2

--- a/basicTestsTesche.ipynb
+++ b/basicTestsTesche.ipynb
@@ -27,7 +27,7 @@
     "One way to start tackling this problem is to simplify our *system* to the most basic TL problem: a two-wire TL in free space:\n",
     "<figure>\n",
     "<center>\n",
-    "<img src='./Images/TL.png' width=\"500\"/> <figcaption align = \"center\"> Schematic of a two-wire TL</figcaption>\n",
+    "<img src='https://github.com/deweatherman/BLT_Equation_Time_Domain_Application/blob/main/Images/TL.png' width=\"500\"/> <figcaption align = \"center\"> Schematic of a two-wire TL</figcaption>\n",
     "</center>\n",
     "</figure>\n",
     "In this case, the loads connected at the ends of the TL represent anything, from an electric motor to a transistor in the driver of the motor, or a battery and the equivalent impedance that the whole circuit board *presents* at its power pins, etc., you get the idea."
@@ -132,7 +132,7 @@
     "\n",
     "# Impingin plane wave:\n",
     "The impinging plane wave is defined as follows:\n",
-    "![](./Images/impingingPlaneWaveDef.JPG) "
+    "![](https://github.com/deweatherman/BLT_Equation_Time_Domain_Application/blob/main/Images/impingingPlaneWaveDef.JPG) "
    ]
   },
   {
