--- a/basicTestsTesche.ipynb
+++ b/basicTestsTesche.ipynb
@@ -15,9 +15,13 @@
    "execution_count": 63,
    "id": "72b769ff-6708-4c97-870f-8646538c9314",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide_input"
+    ]
    },
    "outputs": [
     {
@@ -92,7 +96,15 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "b6c1ce03-ed52-4b8d-a0ec-f2e6545efccc",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide_input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -148,9 +160,13 @@
    "execution_count": 32,
    "id": "9b51316e-b107-4073-85f8-00d89fb183b6",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide_input"
+    ]
    },
    "outputs": [
     {
@@ -215,9 +231,13 @@
    "execution_count": 12,
    "id": "04657632-355a-4392-9cfc-078566a567ec",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide_input"
+    ]
    },
    "outputs": [
     {
@@ -607,9 +627,13 @@
    "execution_count": 33,
    "id": "59f512c8-b887-448f-838c-64b05a1cc050",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide_input"
+    ]
    },
    "outputs": [
     {
@@ -879,9 +903,13 @@
    "execution_count": 26,
    "id": "c8e3f796-ad5f-4677-a6aa-21999891b837",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide_input"
+    ]
    },
    "outputs": [
     {
@@ -967,7 +995,15 @@
    "cell_type": "code",
    "execution_count": 50,
    "id": "70479080-08c6-4686-9ec6-83f193c18c52",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide_output"
+    ]
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1345,7 +1381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
