Added links to notes.

--- a/basicTestsTesche.ipynb
+++ b/basicTestsTesche.ipynb
@@ -1355,9 +1355,9 @@
    "source": [
     "# References:\n",
     "\n",
-    "[1] F. M. Tesche, C. M. Butler, “On the Addition of EM Field Propagation and Coupling Effects in the BLT Equation” , Carl Baum Notes, Interaction Notes, Note 588, June 2004.\n",
+    "[1] F. M. Tesche, C. M. Butler, “On the Addition of EM Field Propagation and Coupling Effects in the BLT Equation” , Carl Baum Notes, Interaction Notes, Note 588, June 2004. Downloadable [here](https://summa.unm.edu/notes/In/0588.pdf).\n",
     "\n",
-    "[2] N. Mora, et al., “Study and Classification of Potential IEMI Sources” , Carl Baum Notes, System Design and Assessment Notes, Note 41, July 2014."
+    "[2] N. Mora, et al., “Study and Classification of Potential IEMI Sources” , Carl Baum Notes, System Design and Assessment Notes, Note 41, July 2014. Downloadable [here](https://summa.unm.edu/notes/SDAN/0041.pdf)."
    ]
   },
   {
